--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,23 +17,12 @@
   <body>
 
       <header>
-        <h1>{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
-        <p>{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
+        <h1>The 2020 Joint Conference on AI Music Creativity</h1>
+        <p>Oct 19-23, 2020 organized and hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden</p>
       </header>
 
       <div id="banner">
-        <span id="logo"></span>
-
-        <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
-        {% if site.show_downloads %}
-          <div class="downloads">
-            <span>Downloads:</span>
-            <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
-            </ul>
-          </div>
-        {% endif %}
+        <span id="logo"><img src="logo_aimusic2020.png"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
