--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
       </header>
 
       <div id="banner">
-        <span id="logo"><img src="logo_aimusic2020.png"></span>
+        <span id="logo"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
