--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,14 +15,13 @@
 
   </head>
   <body>
-
       <header>
         <h1>The 2020 Joint Conference on AI Music Creativity</h1>
-        <p>Oct 19-23, 2020 organized and hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden</p>
+        <p>October 19-23, 2020 organized and hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden</p>
       </header>
 
       <div id="banner">
-        <span id="logo"></span>
+        <span id="logo2"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
