--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,9 @@
       </section>
       <footer>
         {% if site.github.is_project_page %}
+        <p>Financial support comes from ERC-2019-COG No. 864189 
+          (MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism).</p>
+
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></small></p>
