--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   </head>
   <body>
       <header>
-        <h1><a href="https://boblsturm.github.io/aimusic2020/">The 2020 Joint Conference on AI Music Creativity</a></h1>
+        <h1><a href="https://boblsturm.github.io/aimusic2020/" style="color: #cc0000">The 2020 Joint Conference on AI Music Creativity</a></h1>
         <p>October 19-23, 2020 organized and hosted virtually by the Royal Institute of Technology (KTH), Stockholm, Sweden</p>
       </header>
 
