--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 
   </head>
   <body>
@@ -35,7 +35,7 @@
       <footer>
         {% if site.github.is_project_page %}
         <p>Financial support comes from ERC-2019-COG No. 864189 
-          (MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism).</p>
+          [MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism](https://www.kth.se/tmh/speech-communication/musaic-music-at-the-frontiers-of-artificial-creativity-and-criticism-1.950539)</p>
 
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
