--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
       <footer>
         {% if site.github.is_project_page %}
         <p>Financial support comes from ERC-2019-COG No. 864189 
-          [MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism](https://www.kth.se/tmh/speech-communication/musaic-music-at-the-frontiers-of-artificial-creativity-and-criticism-1.950539)</p>
+          <a href="https://www.kth.se/tmh/speech-communication/musaic-music-at-the-frontiers-of-artificial-creativity-and-criticism-1.950539">MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism</a></p>
 
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
         {% endif %}
