--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,12 @@
       </header>
 
       <div id="banner">
-        <span id="logo2"></span>
+        <span id="./logo2.jpg"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
       <nav>
-        <ul></ul>
+        <ul><li>item</ul>
       </nav>
       <section>
         {{ content }}
