--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       </header>
 
       <div id="banner">
-        <span id="./logo2.jpg"></span>
+        <span id="./logo2.png"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
