--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,10 @@
 
     <div class="wrapper">
       <nav>
-        <ul></ul>
+        <ul>
+          <li>Programme</li>
+          <li>Online Exhibit</li>
+        </ul>
       </nav>
       <section>
         {{ content }}
