--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
       </header>
 
       <div id="banner">
-        <span id="./logo2.png"></span>
+        <span id="logo2.png"></span>
       </div><!-- end banner -->
 
     <div class="wrapper">
@@ -41,7 +41,7 @@
           <a href="https://www.kth.se/tmh/speech-communication/musaic-music-at-the-frontiers-of-artificial-creativity-and-criticism-1.950539">MUSAiC: Music at the Frontiers of Artificial Creativity and Criticism</a></p>
 
           <p>Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        <p><img src="KTH_Logotyp_RGB_2013.jpg" width=60></p>
+        <p><a href="https://www.kth.se/" target="new"><img src="KTH_Logotyp_RGB_2013.jpg" width=60></a></p>
         {% endif %}
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></small></p>
       </footer>
