--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li>Programme</li>
+          <li><a href="programme.md">Programme</a></li>
           <li>Online Exhibit</li>
         </ul>
       </nav>
