--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
     <div class="wrapper">
       <nav>
         <ul>
-          <li><a href="https://boblsturm.github.io/aimusic2020/programme.md">Programme</a></li>
+          <li><h3><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></h3></li>
           <li>Online Exhibit</li>
         </ul>
       </nav>
