--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
       <nav>
         <ul>
           <li><h3><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></h3></li>
-          <li>Online Exhibit</li>
+          <li><h3>Online Exhibit</h3></li>
+          <li><h3><a href="https://boblsturm.github.io/aimusic2020/Calls.html">Call for papers, etc.</a></h3></li>
         </ul>
       </nav>
       <section>
