--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
         <ul>
           <li><h3><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></h3></li>
           <li><h3><a href="https://boblsturm.github.io/aimusic2020/exhibit.html">Online Exhibit</a></h3></li>
+          <li><h3><a href="https://boblsturm.github.io/aimusic2020">Home</a></h3></li>
         </ul>
       </nav>
 
