--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
       </section>
       <nav>
         <ul>
-          <li><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></li>
-          <li><a href="https://boblsturm.github.io/aimusic2020/exhibit.html">Online Exhibit</a></li>
-          <li><a href="https://boblsturm.github.io/aimusic2020">Home</a></li>
+          <li><h4><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></h4></li>
+          <li><h4><a href="https://boblsturm.github.io/aimusic2020/exhibit.html">Online Exhibit</a></h4</li>
+          <li><h4><a href="https://boblsturm.github.io/aimusic2020">Home</a></h4</li>
         </ul>
       </nav>
 
