--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
       </section>
       <nav>
         <ul>
-          <li><font size="+2"><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></font></li>
-          <li><h3><a href="https://boblsturm.github.io/aimusic2020/exhibit.html">Online Exhibit</a></h3></li>
-          <li><h3><a href="https://boblsturm.github.io/aimusic2020">Home</a></h4></li>
+          <li><font size="+1"><a href="https://boblsturm.github.io/aimusic2020/programme.html">Programme</a></font></li>
+          <li><font size="+1"><a href="https://boblsturm.github.io/aimusic2020/exhibit.html">Online Exhibit</a></font></li>
+          <li><font size="+1"><a href="https://boblsturm.github.io/aimusic2020">Home</a></font></li>
         </ul>
       </nav>
 
